--- a/stm32f0_clock.ioc
+++ b/stm32f0_clock.ioc
@@ -1,5 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-ADC.IPParameters=SamplingTime
+ADC.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
+ADC.ContinuousConvMode=DISABLE
+ADC.DMAContinuousRequests=DISABLE
+ADC.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T15_TRGO
+ADC.IPParameters=SamplingTime,DMAContinuousRequests,ExternalTrigConv,ContinuousConvMode,ClockPrescaler
 ADC.SamplingTime=ADC_SAMPLETIME_55CYCLES_5
 CAD.formats=
 CAD.pinconfig=
@@ -13,7 +17,8 @@ Mcu.CPN=STM32F071C8T6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=I2C1
-Mcu.IP10=USART3
+Mcu.IP10=USART1
+Mcu.IP11=USART3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
@@ -21,8 +26,8 @@ Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM6
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP9=TIM15
+Mcu.IPNb=12
 Mcu.Name=STM32F071C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -44,6 +49,7 @@ Mcu.Pin22=PB7
 Mcu.Pin23=PB8
 Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -51,7 +57,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F071C8Tx
@@ -188,7 +194,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=true
+ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -214,7 +220,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=24000000
@@ -253,6 +259,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
+TIM15.IPParameters=TIM_MasterOutputTrigger
+TIM15.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload
@@ -265,7 +273,7 @@ TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generat
 TIM3.Period=999
 TIM3.Prescaler=47
 TIM3.Pulse-PWM\ Generation1\ CH1=800
-TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM6.IPParameters=Prescaler,AutoReloadPreload
 TIM6.Prescaler=47
 USART1.IPParameters=VirtualMode-Asynchronous
@@ -274,6 +282,8 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM15_VS_ClockSourceINT.Mode=Internal
+VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
