--- a/stm32f0_clock.ioc
+++ b/stm32f0_clock.ioc
@@ -63,6 +63,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F071C8Tx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
+NVIC.ADC1_COMP_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -259,23 +260,25 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
-TIM15.IPParameters=TIM_MasterOutputTrigger
+TIM15.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM15.Period=50000-1
+TIM15.Prescaler=480-1
 TIM15.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload
-TIM2.Period=333
-TIM2.Prescaler=47
-TIM2.Pulse-PWM\ Generation1\ CH1=50
+TIM2.Period=17777
+TIM2.Prescaler=0
+TIM2.Pulse-PWM\ Generation1\ CH1=3555
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload
-TIM3.Period=999
-TIM3.Prescaler=47
+TIM3.Period=4800-1
+TIM3.Prescaler=0
 TIM3.Pulse-PWM\ Generation1\ CH1=800
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM6.IPParameters=Prescaler,AutoReloadPreload
-TIM6.Prescaler=47
+TIM6.Prescaler=48-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
